<resources>
    <string name="app_name">公信e药测试</string>
    <string-array name="spingarr">
        <item>全科</item>
        <item>口腔科</item>
        <item>骨科</item>
        <item>内科</item>
    </string-array>


    <!--第二期-->

    <string name="footview">正在加载更多...</string>


    <string name="jiankangdangan">健康档案</string>
    <string name="jiankangdangan_ps">查询个人的健康信息</string>
    <string name="yuanchengzhenliao">远程诊疗</string>
    <string name="yuanchengzhenliao_ps">实时在线诊断病情</string>
    <string name="dianzibingli">电子病历</string>
    <string name="dianzibingli_ps">查询历史就诊记录</string>
    <string name="fenzhenzhuanzhen">分诊转诊</string>
    <string name="fenzhenzhuanzhen_ps">病情严重可转诊到医院</string>

    <string name="zhucedenglu">注册/登录</string>
    <string name="wodedingdan">我的订单</string>
    <string name="wodequanzi">我的圈子</string>
    <string name="gerenziliao">个人资料</string>
    <string name="guanyuwomen">关于我们</string>
    <string name="shiyongbangzhu">使用帮助</string>
    <string name="xiaoxi">消息</string>
    <string name="yijianfankui">意见反馈</string>
    <string name="tuichudenglu">退出登录</string>

    <string name="jibenziliao">基本信息</string>
    <string name="zhenshixingming">真实姓名</string>
    <string name="xingbie">性别</string>
    <string name="shengri">生日</string>
    <string name="guoji">国籍</string>
    <string name="jiguan">籍贯</string>
    <string name="xiangxidizhi">详细地址</string>
    <string name="minzu">民族</string>
    <string name="tizhong">体重</string>
    <string name="shengao">身高</string>
    <string name="buchang">步长</string>
    <string name="xuexing">血型</string>
    <string name="RHyinxingxuexing">RH阴性血型</string>
    <string name="shenfenzhenghao">身份证号</string>
    <string name="shoujihao">手机号</string>
    <string name="wenhuachengdu">文化程度</string>
    <string name="changzhuleixing">常驻类型</string>
    <string name="hunyinzhuangkuang">婚姻状况</string>
    <string name="weixinhao">微信号</string>
    <string name="jinjilianxiren">紧急联系人</string>
    <string name="jinjidianhua">紧急电话</string>
    <string name="gongzuodanwei">工作单位</string>
    <string name="zhiye">职业</string>
    <string name="zhiyefenlei">职业分类</string>
    <string name="baolushi">暴露史</string>
    <string name="jiankangkahao">健康卡号</string>
    <string name="shebaokahao">社保卡号</string>
    <string name="yibaoleixing">医保类型</string>
    <string name="zhifufangshi">支付方式</string>

    <string name="gengduo">更多</string>
    <string name="jiankangtoutaio">健康头条</string>
    <string name="zhengcejiedu">政策解读</string>
    <string name="hitn_soosuo">搜索医生、话题、健康信息</string>

    <string name="quanbu">全部</string>
    <string name="zaixian">在线</string>
    <string name="lixian">离线</string>
    <string name="renpaidui">人排队</string>
    <string name="lijishenqing">立即申请</string>
    <string name="yisheng">医生</string>
    <string name="shuaixuan">筛选</string>

    <string name="chufangjianyi">您的建议处方来了，点击查看</string>
    <string name="shuodiansm">说点什么...</string>
    <string name="fatupian">发图片</string>
    <string name="jietu">截图</string>

    <string name="yizhu">医嘱</string>

    <string name="zhuanchujigou">转出机构</string>
    <string name="zhuanrujigou">转入机构</string>
    <string name="yuyueshijian">预约时间</string>
    <string name="jiuzhenyisheng">就诊医生</string>

    <string name="binglihao">病历号</string>
    <string name="zhushu">主述</string>
    <string name="jiwangshi">既往史</string>
    <string name="gerenshi">个人史</string>
    <string name="jiazushi">家族史</string>
    <string name="tigejiancha">体格检查</string>
    <string name="fuzhujiancha">辅助检查</string>
    <string name="zhenduan">诊断</string>
    <string name="tishubingzhong">特殊病种</string>
    <string name="chuliyijian">处理意见</string>
    <string name="beizhu">备注</string>
    <string name="shijian">时间</string>

    <string name="zhuanzhendan">转诊单</string>
    <string name="shenqingdanhao">申请单号</string>
    <string name="jibingmingcheng">疾病名称</string>
    <string name="zhuanrukeshi">转入科室</string>
    <string name="jiuzhenshijian">就诊时间</string>
    <string name="yuyueyisheng">预约医生</string>
    <string name="zhuanrujigoushenhe">转入机构审核状态</string>
    <string name="shenqingshijian">申请时间</string>

    <string name="jkbaogaoliebiao">健康报告列表</string>
    <string name="tijiandanhao">体检单号:</string>
    <string name="chakan">查看</string>
    <string name="huanzhexingming">患者姓名</string>
    <string name="yishengxingming">医生姓名</string>
    <string name="zuzhijigou">组织机构</string>
    <string name="jianceshijian">检测时间</string>

    <string name="yichaunbingshi">遗传病史</string>
    <string name="binglimingcheng">病历名称</string>
    <string name="rukushijian">入库时间</string>

    <string name="yizhuxiangqing">医嘱详情</string>
    <string name="yizhuneirou">医嘱内容：</string>
    <string name="yizhuID">医嘱ID</string>
    <string name="kaizhuyisheng">开嘱医生</string>
    <string name="kaishishijian">开始时间</string>
    <string name="qixiao">期效</string>
    <string name="pinlv">频率</string>
    <string name="fuwujigou">服务机构</string>
    <string name="kaizhushijian">开嘱时间</string>

    <string name="liaotianneirong">聊天内容</string>
    <string name="ninxuanze">您选择的是：</string>
    <string name="quxiaoshengqing">取消申请</string>











</resources>
