<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="10dp"
    android:background="@color/background_write"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_write"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:id="@+id/item_baogao_danhao_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_title"
                android:layout_centerVertical="true"
                android:text="@string/tijiandanhao"
                />
            <TextView
                android:id="@+id/item_baogao_danhao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_title"
                android:text="1515951515"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/item_baogao_danhao_text"
                />
            <TextView
                android:id="@+id/item_baogao_chakan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/text_title"
                android:padding="5dp"
                android:textColor="@color/background_green"
                android:text="@string/chakan"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/background_fgx"
            android:layout_marginTop="10dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_title"
                android:text="@string/huanzhexingming"
                />
            <TextView
                android:id="@+id/item_baogao_hzname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/text_title"
                android:textColor="@color/text_black"
                android:text="张三"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_title"
                android:text="@string/yishengxingming"
                />
            <TextView
                android:id="@+id/item_baogao_ysname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_title"
                android:layout_alignParentRight="true"
                android:textColor="@color/text_black"
                android:text="肖某某"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_title"
                android:text="@string/zuzhijigou"
                />
            <TextView
                android:id="@+id/item_baogao_zuzhi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/text_title"
                android:textColor="@color/text_black"
                android:text="大药房"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_title"
                android:text="@string/jianceshijian"
                />
            <TextView
                android:id="@+id/item_baogao_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/text_title"
                android:textColor="@color/text_black"
                android:text="2018-03-03"
                />
        </RelativeLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>